src-ken&y/objects/Order__c.object
<CustomObject>
    <customHelpPage>HelpOrder</customHelpPage>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to currency</description>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Order Currency</relationshipLabel>
        <relationshipName>Order_Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deliver_to_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deliver-to Facility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Facility__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Receiving_Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Order Headers (Deliver-to Facility)</relationshipLabel>
        <relationshipName>Order_Headers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deliver_to_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deliver-to Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Deliver_to_Facility__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Order Headers (Deliver-to Location)</relationshipLabel>
        <relationshipName>Order_Headers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finalized_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DO NOT PUT on page layout, it is hidden field to control user click.</description>
        <inlineHelpText>DO NOT PUT on page layout, it is hidden field to control user click.</inlineHelpText>
        <label>Finalized Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Once the Order is finalized the record is eligible to generate accounting entries.</description>
        <inlineHelpText>Once the Order is finalized the record is eligible to generate accounting entries.</inlineHelpText>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_Date__c</fullName>
        <label>Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Planner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receiving_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receiving Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Order Headers (To Company)</relationshipLabel>
        <relationshipName>Order_Headers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_from_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship-from Facility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Facility__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Shipping_Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Order Headers</relationshipLabel>
        <relationshipName>Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_from_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship-from Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Ship_from_Facility__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Order Headers</relationshipLabel>
        <relationshipName>Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Order Headers</relationshipLabel>
        <relationshipName>Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <label>Transaction Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Ship_from_Facility__c</columns>
        <columns>Ship_from_Location__c</columns>
        <columns>Deliver_to_Facility__c</columns>
        <columns>Deliver_to_Location__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ship_from_Facility__c</field>
            <operation>equals</operation>
            <value>Facility 2</value>
        </filters>
        <filters>
            <field>Ship_from_Facility__c</field>
            <operation>equals</operation>
            <value>Facility 1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Order</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Shipping_Delivery_Facility_Is_not_Same</fullName>
        <active>true</active>
        <description>validate ship from facility and deliver to facility cannot be same</description>
        <errorConditionFormula>Deliver_to_Facility__c == Ship_from_Facility__c</errorConditionFormula>
        <errorMessage>Ship from facility and Deliver to facility cannot be same</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Shipping_and_Receiving_Company</fullName>
        <active>true</active>
        <description>The Shipping Company must match the Receiving Company.</description>
        <errorConditionFormula>Shipping_Company__c &lt;&gt; Receiving_Company__c</errorConditionFormula>
        <errorMessage>The Shipping Company must match the Receiving Company.</errorMessage>
    </validationRules>
</CustomObject>